--- a/app/tag/@spec/page.mdx
+++ b/app/tag/@spec/page.mdx
@@ -1,6 +1,14 @@
+import Badge from '@libComponents/Badge';
+import Image from '@components/showcase/ImageSection';
+import Component from '@components/showcase/ComponentSection';
+import imageSrc from '@public/images/tag';
+import * as Demo from "../@dev/demo-components"
+
 :::callout[note]
 An element used for representing user-authored content.
 :::
+
+<Image src={imageSrc.tag.src} alt='tag' />
 
 ## Design checklist
 
@@ -27,6 +35,10 @@ An element used for representing user-authored content.
 - **Avatar**: An optional visual representation of a user or entity associated with the tag.
 - **Remove button**: An optional button that removes the tag from the interface.
 
+<Image src={imageSrc.anatomy.src} alt='anatomy' />
+<Image src={imageSrc.anatomy2.src} alt='anatomy2' />
+
+
 ## States
 
 ### Container
@@ -37,9 +49,18 @@ An element used for representing user-authored content.
 
 - The container is focused via keyboard interaction, indicated by a ring outline.
 
+<Image src={imageSrc.focused.src} alt='focused' />
+
 ### Remove button
 
 This sub-component has the same interaction states as [[Button]] except for the pending state.
+
+<Image src={imageSrc.enabledRemoveButton.src} alt='enabledRemoveButton' />
+<Image src={imageSrc.hoveredRemoveButton.src} alt='hoveredRemoveButton' />
+<Image src={imageSrc.pressedRemoveButton.src} alt='pressedRemoveButton' />
+<Image src={imageSrc.focusedRemoveButton.src} alt='focusedRemoveButton' />
+<Image src={imageSrc.disabledRemoveButton.src} alt='disabledRemoveButton' />
+
 
 ## Options
 
@@ -48,31 +69,49 @@ This sub-component has the same interaction states as [[Button]] except for the 
 - **Outlined**: Medium visual emphasis with a border and a light color fill.
 - **Glass**: Medium-low emphasis with a translucent, frosted appearance.
 
+<Image src={imageSrc.kind.src} alt='kind' />
+
 ##### Color
 
 - Tags are available in the default neutral color, the theme's accent color and any color derived from a valid color code.
+
+<Image src={imageSrc.netralColor.src} alt='netralColor' />
+<Image src={imageSrc.accentColor.src} alt='accentColor' />
 
 ##### Size
 
 - Tags are available in small, medium, and large sizes.
 - Medium is the default tag size.
 
+<Image src={imageSrc.small.src} alt='small' />
+<Image src={imageSrc.medium.src} alt='medium' />
+<Image src={imageSrc.large.src} alt='large' />
+
 ##### Icon
 
 - An icons can be optionally added next to the tag label to provide additional visual context.
 
+<Image src={imageSrc.icon.src} alt='icon' />
+
 ##### Avatar
 
 - An avatar can be optionally added next to the tag label to represent a user or entity associated with the tag.
+
+<Image src={imageSrc.avatar.src} alt='avatar' />
 
 ##### Remove button
 
 - A remove button is included by default to the right of the tag.
 - Disabling the remove button also removes it from the tag.
 
+<Image src={imageSrc.removeButtonOn.src} alt='removeButtonOn' />
+<Image src={imageSrc.removeButtonOff.src} alt='removeButtonOff' />
+
 ##### Focusable container
 
 - The container can optionally be allowed to receive keyboard focus.
+
+<Image src={imageSrc.focusedContainer.src} alt='focusedContainer' />
 
 ## Behaviors
 
