--- a/app/text-input/@spec/page.mdx
+++ b/app/text-input/@spec/page.mdx
@@ -1,7 +1,14 @@
+import Badge from '@libComponents/Badge';
+import Image from '@components/showcase/ImageSection';
+import Component from '@components/showcase/ComponentSection';
+import imageSrc from '@public/images/text-input';
+import * as Demo from "../@dev/demo-components"
+
 :::callout[note]
 A basic input field for entering text.
 :::
 
+<Image src={imageSrc.textInput.src} alt='textInput' />
 
 ## Design checklist
 
@@ -30,9 +37,13 @@ A basic input field for entering text.
 - Input value: The value entered by the user.
 - Clear button: An optional button that clears the input value.
 
+<Image src={imageSrc.anatomy.src} alt='anatomy'/>
+
 ### Floating label
 
 - Label: A text label that transitions from an in-field placeholder to a label above the field when focused or filled.
+
+<Image src={imageSrc.anatomy2.src} alt='anatomy2'/>
 
 ## States
 
@@ -44,21 +55,36 @@ A basic input field for entering text.
 
 - Interaction with the input field is available.
 
+<Image src={imageSrc.enabled.src} alt='enabled'/>
+<Image src={imageSrc.enabled2.src} alt='enabled2'/>
+
 ##### Hovered
 
 - The cursor is currently positioned over the input field, indicated by the text cursor and a slightly different border color.
+
+<Image src={imageSrc.hovered.src} alt='hovered'/>
+<Image src={imageSrc.hovered2.src} alt='hovered2'/>
 
 ##### Focused
 
 - The input field is focused via keyboard or mouse interaction, indicated by a thickened border.
 
+<Image src={imageSrc.focused.src} alt='focused'/>
+<Image src={imageSrc.focused2.src} alt='focused2'/>
+
 ##### Read-only
 
 - The input field is not editable, but its content can still be selected.
 
+<Image src={imageSrc.readonly.src} alt='readonly'/>
+<Image src={imageSrc.readonly2.src} alt='readonly2'/>
+
 ##### Disabled
 
 - Interaction with the input field is disallowed, indicated by a muted appearance.
+
+<Image src={imageSrc.disabled.src} alt='disabled'/>
+<Image src={imageSrc.disabled2.src} alt='disabled2'/>
 
 #### Value states
 
@@ -66,17 +92,26 @@ A basic input field for entering text.
 
 - The field does not contain any input value.
 
+
 ##### Filled
 
 - The field contains some input value.
+
+<Image src={imageSrc.enabled.src} alt='enabled'/>
 
 ##### Invalid
 
 - The input value does not meet specified criteria, indicated by a red border color and an error message.
 
+<Image src={imageSrc.invalid.src} alt='invalid'/>
+<Image src={imageSrc.invalid2.src} alt='invalid2'/>
+
 ### Clear button
 
 This sub-component has the same states as [[Button]].
+
+<Image src={imageSrc.clearButton.src} alt='clearButton'/>
+<Image src={imageSrc.clearButton2.src} alt='clearButton2'/>
 
 ## Options
 
@@ -84,10 +119,16 @@ This sub-component has the same states as [[Button]].
 
 - Text inputs are available in default or alternative [[Layering]].
 
+<Image src={imageSrc.defaultLayer.src} alt='defaultLayer' />
+<Image src={imageSrc.alternativeLayer.src} alt='alternativeLayer' />
+
 ##### Size
 
 - Small and medium text inputs differ in field height.
 - Medium is the default text input size.
+
+<Image src={imageSrc.small.src} alt='sizeSmall' />
+<Image src={imageSrc.medium.src} alt='sizeMedium' />
 
 ##### Floating label
 
@@ -95,17 +136,25 @@ This sub-component has the same states as [[Button]].
 - The label is maximized within the middle of the field when the input value is empty and the input field has not received focus.
 - The label is minimized and floats towards the top when the input field receives focus.
 
+<Image src={imageSrc.floatingLabel.src} alt='floatingLabel' />
+
 ##### Placeholder
 
 - A placeholder text can be displayed for the purpose of providing the user an input hint.
+
+<Image src={imageSrc.placeholder.src} alt='placeholder' />
 
 ##### Clear button
 
 - A clear button can be added to the input field to allow quick clearing of the entered value when clicked.
 
+<Image src={imageSrc.clearButtonOn.src} alt='clearButtonOn' />
+
 ##### Icon
 
 - An icon can be optionally added to the leftmost position within the input field.
+
+<Image src={imageSrc.icon.src} alt='icon' />
 
 ## Behaviors
 
