feat (date picker): support onInputChange - onInputChange goal to get raw value from input - update doc (controlled component) - validation of enable/disable flatpickr option

--- a/app/date-picker/@dev/page.mdx
+++ b/app/date-picker/@dev/page.mdx
@@ -35,7 +35,15 @@ import * as Demo from './demo-components'
 <Demo.DemoDatePicker color="accent" sideIcon="left" inputSize="sm" />
 
 ## Controlled
+
+### With enable time
+
 <Demo.DemoControlledDatePicker />
+
+
+### With select
+
+<Demo.DemoSelectDatePicker />
 
 ## Alternative
 
@@ -73,7 +81,14 @@ import * as Demo from './demo-components'
 <Demo.DemoDatePicker color="accent" sideIcon="left" inputSize="sm" theme="alternative"/>
 
 ## Controlled
+
+### With enable time
+
 <Demo.DemoControlledDatePicker theme="alternative" />
+
+### With select
+
+<Demo.DemoSelectDatePicker theme="alternative"/>
 
 </div>
 
