update (general): - doc: add dev guideline, component guideline, change readme information. - component: unify a type of export (named export)

--- a/app/select/@spec/page.mdx
+++ b/app/select/@spec/page.mdx
@@ -1,4 +1,4 @@
-import Badge from '@libComponents/Badge';
+import { Badge } from '@libComponents/Badge';
 import Image from '@components/showcase/ImageSection';
 import Component from '@components/showcase/ComponentSection';
 import imageSrc from '@public/images/select';
