update (doc): set library to local packages (link to registry folder)

--- a/app/badge/@spec/page.mdx
+++ b/app/badge/@spec/page.mdx
@@ -1,5 +1,5 @@
 
-import { Badge } from '@libComponents/Badge';
+import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImageSection';
 import Component from '@components/showcase/ComponentSection';
 import imageSrc from '@public/images/badge';
