--- a/app/toast/@dev/page.mdx
+++ b/app/toast/@dev/page.mdx
@@ -1,5 +1,5 @@
 import * as Demo from "./demo-components";
-import {ToastContainer} from '@libComponents/Toast';
+import {ToastContainer} from 'beta-parity-react/ui/Toast';
 
 {/* add container in your page you want to use toast */}
 {/* <ToastContainer limit={3} stacked={false} sortImportance={true}/> */}
