--- a/app/button/@spec/page.mdx
+++ b/app/button/@spec/page.mdx
@@ -1,4 +1,4 @@
-import { Badge } from '@libComponents/Badge';
+import { Badge } from 'beta-parity-react/ui/Badge';
 import Image from '@components/showcase/ImageSection';
 import Component from '@components/showcase/ComponentSection';
 import imageSrc from '@public/images/button';
