--- a/app/pagination/@dev/page.mdx
+++ b/app/pagination/@dev/page.mdx
@@ -4,3 +4,5 @@ import * as Demo from "./demo-components"
 ## Basic
 
 <Demo.DemoBasicPagination totalPage={5} pageSize={5} />
+<Demo.DemoBasicPagination totalPage={5} pageSize={5} color="accent" />
+<Demo.DemoBasicPagination totalPage={5} pageSize={5} bordered />
