feat (pagination): - change html structure - add keyboard behavior

--- a/app/pagination/@dev/page.mdx
+++ b/app/pagination/@dev/page.mdx
@@ -5,7 +5,7 @@ import Link from 'next/link'
 ## Basic
 
 ### Neutral
-<Demo.DemoBasicPagination totalPage={5} />
+<Demo.DemoBasicPagination totalPage={3} />
 <Demo.DemoBasicPagination totalPage={5} bordered />
 
 ### Accent
@@ -18,7 +18,7 @@ import Link from 'next/link'
             icon: 'next'
           },
           prev: {
-            icon: 'previous'
+            icon: 'prev'
           },
           first: {
             isActive: false
