--- a/app/accordion/@spec/page.mdx
+++ b/app/accordion/@spec/page.mdx
@@ -1,8 +1,8 @@
 import { Badge } from 'beta-parity-react/ui/Badge';
-import Image from '@components/showcase/ImageSection';
-import Component from '@components/showcase/ComponentSection';
+import Image from '@components/showcase/ImagePreview';
+import Component from '@components/showcase/CodePreview';
 import imageSrc from '@public/images/accordion';
-import * as Demo from "../@dev/demo-components"
+import * as Demo from "@public/demo/accordion"
 
 :::callout[note]
 A component that organizes content into vertically stacked collapsible and expandable sections.
