--- a/app/content-navigation/@dev/page.mdx
+++ b/app/content-navigation/@dev/page.mdx
@@ -1,3 +1,9 @@
 import * as Demo from './demo-components';
 
+## Neutral
+
 <Demo.DemoContentNavigation />
+
+## Accent
+
+<Demo.DemoAccentContentNavigation />
