draft (slider): add vertical and reverse slider components with updated styles

--- a/app/slider/@dev/page.mdx
+++ b/app/slider/@dev/page.mdx
@@ -3,3 +3,7 @@ import * as Demo from '../@dev/demo-components';
 <Demo.BasicSlider />
 
 <Demo.RangeSlider />
+
+<Demo.VerticalSlider />
+
+<Demo.ReverseSlider />
