feat(slider): add AccentSlider component and update slider styles

--- a/app/slider/@dev/page.mdx
+++ b/app/slider/@dev/page.mdx
@@ -1,11 +1,29 @@
 import * as Demo from '../@dev/demo-components';
 
+## Basic
+
 <Demo.BasicSlider />
+
+## Range
 
 <Demo.RangeSlider />
 
+## Vertical
+
 <Demo.VerticalSlider />
+
+## Indicator reverse
 
 <Demo.ReverseSlider />
 
+## Indicator Tooltip
+
 <Demo.TooltipSlider />
+
+## Accent color
+
+<Demo.AccentSlider />
+
+## Disabled
+
+<Demo.DisabledSlider />
