feat(PINField): add alternative theme support and enhance demo components

--- a/app/pinfield/@dev/page.mdx
+++ b/app/pinfield/@dev/page.mdx
@@ -23,3 +23,33 @@ import * as Demo from './demo-components';
 ## Custom
 
 <Demo.DemoCustomPINField />
+
+## Alternative
+
+<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
+
+### Basic
+
+<Demo.DemoBasicPINField theme='alternative' />
+
+### Groups
+
+<Demo.DemoGroupsPINField theme='alternative' />
+
+### Masked
+
+<Demo.DemoMaskedPINField theme='alternative' />
+
+### Sizes
+
+<Demo.DemoSizePINField theme='alternative' />
+
+### States
+
+<Demo.DemoStatePINField theme='alternative' />
+
+### Custom
+
+<Demo.DemoCustomPINField theme='alternative' />
+
+</div>
