update (FileInput): add alternative theme support

--- a/app/file-input/@dev/page.mdx
+++ b/app/file-input/@dev/page.mdx
@@ -1,5 +1,17 @@
 import * as Demo from '../@dev/demo-components';
 
+## Default
+
 <Demo.DemoFileInput />
 
 <Demo.DemoErrorFileInput />
+
+## Alternative
+
+<div className="bg-[var(--background-alternative)] p-4 rounded-md flex flex-col gap-4">
+
+<Demo.DemoFileInput theme='alternative' />
+
+<Demo.DemoErrorFileInput theme='alternative' />
+
+</div>
