feat(Table): enhance table components with new features and improved styling

--- a/app/table/@dev/page.mdx
+++ b/app/table/@dev/page.mdx
@@ -1,5 +1,13 @@
 import * as Demo from './demo-components';
 
-## Basic
+## Basic Table
 
-<Demo.TableDemos />
+<Demo.BasicTable />
+
+## Advanced Table
+
+<Demo.AdvancedTable />
+
+<Demo.AdvancedTable2 />
+
+<div className='h-96' />
