update (Avatar): add support for children in Avatar component

--- a/app/avatar/@dev/page.mdx
+++ b/app/avatar/@dev/page.mdx
@@ -12,6 +12,11 @@ import * as Demo from './demo-components';
 
 <Demo.DemoImageAvatar />
 
+## Children
+
+<Demo.DemoAvatarWithChildren />
+<Demo.DemoAvatarWithNextImage />
+
 ## Border Styles
 
 <Demo.DemoBorderStylesAvatar />
